add postgresql to docker-compose
add pgdata to .gitignore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: api
     volumes:
       - ./api:/app
+    depends_on:
+      - db
 
   client:
     build: ./client
@@ -13,3 +15,14 @@ services:
     container_name: client
     volumes:
       - ./client:/app
+
+  db:
+    image: postgres
+    restart: always
+    container_name: db
+    environment:
+      POSTGRES_USER: 'basic-user'
+      POSTGRES_PASSWORD: 'PASSWORD'
+      POSTGRES_DB: 'basic'
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
