--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,16 @@
 {
   "scripts": {
     "build": "webpack --config webpack.config.js --progress",
-    "start": "webpack-dev-server --hot --host 0.0.0.0",
+    "start": "webpack server --host 0.0.0.0",
     "prod": "webpack --config webpack.prod.js --progress"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
-    "webpack-cli": "^4.1.0"
+    "webpack": "^5.3.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
